# SodicamTest

./: .gitignore  Documentacion_Tecnica_Submodulo_ETQ.docx  ETQ_Print_Local.postman_collection.json  README.md
back/: .coveragerc  .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
back/api/: main.py
back/api/controllers/: health_controller.py  label_print_controller.py
back/api/response/: __init__.py  api_response.py  api_response_base.py  metadata.py
back/api/routes/: docs_routes.py
back/api/schemas/: label_print.py
back/application/constants/: constants.py
back/application/services/: print_service.py
back/config/: config.py
back/domain/: models.py  print_rules.py
back/infrastructure/: audit_repository.py  mock_repository.py
back/infrastructure/mocks/: inventory.json  orders.json  print_history.json
back/tests/test_api/test_controllers/: test_label_print_controller.py
back/tests/test_application/test_services/: test_print_service.py
back/tests/test_domain/: test_print_rules.py
front/: .dockerignore  Dockerfile  README.md  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json
front/src/: index.html  main.ts  styles.scss
front/src/app/: app.config.ts  app.routes.ts  app.spec.ts
front/src/app/pages/etq-print/: etq-print.page.html  etq-print.page.scss  (+2 more)
front/src/app/services/: label-print.service.ts
front/src/environments/: environment.DEV.ts  environment.PROD.ts  environment.QA.ts  environment.ts
front/src/styles/: _fonts.scss  _variables.scss
