[project]
name = "etq-print-backend"
version = "0.1.0"
description = "Decoupled ETQ/LPN label printing simulator"
authors = [
    {name = "AndresRomeroR", email = "46949598+AndresRomeroR@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.111.0,<1.0.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
httpx = "^0.28.1"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
